TUP-231: Part 1 of N to Core-UI (Fix Core-CMS / Core-Styles Mismatch) (#17)
* TUP-231: Move CMS CSS from Core Styles to Core CMS

Some Core-CMS styles were in Core-Styles repo, because I moved too much.

Cause: "FP-1496: CSS Build to Core-Styles" (v3.6.0 Core-Styles)

* chore(tup-231): revert comment tweak

* fix(tup-231): restore deleted file

* fix(tup-231): move tacc-search-bar.html to trumps

* fix(tup-231): revert unnecessarily editted files

* docs(tup-231): better tacc-search-bar.md wording

* chore(tup-231): delete excess new lines

* docs(tacc-search-bar): battle GitHub markdown

--- a/source/_imports/settings/color.css
+++ b/source/_imports/settings/color.css
@@ -1,7 +1,3 @@
-/* WARNING: This file is copied from Portal repo */
-/* TODO: Share source code between CMS, Portal, & User Guide */
-/* SEE: https://github.com/TACC/Frontera-Portal/blob/master/client/src/styles/settings/color.css */
-
 /* SETTINGS: Color */
 
 /* Usage: `var(--global-color-primary--normal)` */
@@ -17,7 +13,8 @@
 */
 
 :root {
-  /* Primary (Text, Layout) */
+  /* The primary colors of any app (for neutral text, borders, backgrounds) */
+  /* IDEA: Rename these from `primary` to `neutral` */
 
   --global-color-primary--xx-light: #FFFFFF;
     --global-color-primary--xx-light-rgb: 255, 255, 255;
@@ -30,16 +27,4 @@
     --global-color-primary--x-dark-rgb: 72, 72, 72;
   --global-color-primary--xx-dark: #222222;
     --global-color-primary--xx-dark-rgb: 34, 34, 34;
-
-  /* Distinct Hues */
-
-  /* FAQ: This placeholder accent color came from Portal */
-  /* CAVEAT: A standard accent color definition is pending more designs */
-  /* NOTE: The new Frontera and TACC designs both have brown and blue accents */
-  --global-color-accent--normal: #877453;
-
-  /* CAVEAT: Not accessible within paragraph text (edge case as of 2021-08) */
-  --global-color-link-on-light--normal: #003399;
-  /* WARNING: This color is from Dev not Design (not rendered as of 2021-08) */
-  --global-color-link-on-dark--normal: #0088FF;
 }
